Fixed some issues and bugs Added remaining localization ids in en.json Modified showing update status button logic only via CSS and fixed the bug of header not showing on comments Changed names of some classes like bold Changed names of some variables

--- a/components/profile_popover/profile_popover.scss
+++ b/components/profile_popover/profile_popover.scss
@@ -5,6 +5,6 @@
     padding: 0
 }
 
-.bold {
+.user-profile-popover__heading {
     font-weight: 600;
 }
